# stacktach-stackdistiller

./: .gitreview  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: event_definitions_config.md
stackdistiller/: condenser.py  distiller.py  trait_plugins.py
tests/: test_distiller.py  test_trait_plugins.py
