[metadata]
description-file = README.md
name = stackdistiller
version = 0.12
author = Monsyne Dragon
author_email = mdragon@rackspace.com
summary = A data extraction and transformation library for OpenStack notifications
license = Apache-2
keywords =
    OpenStack
    notifications
    events
    extraction
    transformation
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

home-page = https://github.com/stackforge/stacktach-stackdistiller

[files]
packages =
    stackdistiller
